* Changelog

All notable changes to this project will be documented in this file.

** <2019-09-15 Sun>

*** Fixed

- The 'Sync on application becoming visible' feature works on iOS and
  Safari
  - If enabled, the current org file is pulled from the sync backend
    when the browser tab becomes visible. This prevents you from
    having a stale file before starting to make changes to it.

** <2019-09-08 Sun>
*** Added

- Documented how to use organice from a bookmarklet using the capture
  template feature

** <2019-09-06 Fri>
*** Fixed

- Removed Google Analytics tracking, because it has no place here

** <2019-09-02 Mon>

*** Added

- Configure Google Drive for the free community version of organice at
  https://organice.200ok.ch
- Documented SPA routing for self-hosting
- Wrote and publicized a Privacy Policy

** <2019-08-27 Tue>

*** Changed

- Color scheme has been ported to the popular [[https://ethanschoonover.com/solarized/][Solarized]] (light mode)
  - Whilst doing so, CSS variables have been introduced, so that
    there's not a whole lot of repetition of magic rgb values going on
  - The logo has been adapted, too
- The landing page and settings screens have been de-cluttered

** <2019-08-26 Mon>

*** Added

- Continuous deployment: Merging to =master= triggers a build on CI
  and when successful, it triggers a deploy to https://org.200ok.ch
- Add a new temporary™ logo: [[file:public/organice.png][organice.png]]

** <2019-08-25 Sun>

*** Added

- Since we want organice to be a community driven project, we have added:
  - [[file:CODE_OF_CONDUCT.org][Code of conduct]]
  - [[file:CONTRIBUTING.org][Contributing guidelines]]

- Add [[https://circleci.com/][CircleCI]] to run the tests on every commit
  - They are also integrated as a check for PRs with the benefit that
    contributors get automated feedback by running the regression test
    suite.

- Add [[https://greenkeeper.io][Greenkeeper]] for automated dependency management
